--- a/src/views/Account/Login/login.module.scss
+++ b/src/views/Account/Login/login.module.scss
@@ -4,23 +4,58 @@
 .container {
     @include mixin.flexCenter;
     height: variables.$screen_height;
-    width:variables.$screen_width;
+    flex-direction: column;
+    @include mixin.breakpoint(md){
+        flex-direction: row;
+    }
     & > div{
-        height:100%;
+        height:fit-content;
         background-color: variables.$white_color;
+        @include mixin.breakpoint(md){
+            height:100%;
+        }
     }
     & > div:first-of-type{
         @include mixin.flexCenter;
-        width: 50%;
+        width:100%;
+        @include mixin.breakpoint(md){
+            width: 50%;
+        }
         padding:0 5%;
         position: relative;
+
+        & > .logo{
+            position:absolute;
+            top:60px;
+            left:15%;
+        }
+
+        & > .image_wrapper{
+            @include mixin.flexCenter;
+            display: none;
+            @include mixin.breakpoint(md){
+                display: flex;
+            }
+            & > img{
+                width:100%;
+                height: auto;
+                object-fit: contain;
+            }
+            
+        
+        }
+        
     }
     & > div:nth-of-type(2){
         @include mixin.flexCenter;
-        width:50%;
+        width:100%;
+        flex:1;
+        @include mixin.breakpoint(md){
+            width:50%;
+        }
         & > div{
             @include mixin.flexCenter;
-            width: max(300px,70%);
+            width: max(320px,70%);
             flex-direction: column;
             gap:50px;
             & > div{
@@ -46,8 +81,9 @@
                     & input{
                         width: 100%;
                         color:variables.$primary_text_1;
-                        border: 1px solid hsl(from variables.$primary_border_1 h s l /.15);
+                        border: 2px solid hsl(from variables.$primary_border_1 h s l /.15);
                         padding:.7rem;
+                        border-radius: .2rem;
                         &::placeholder{
                             color:hsl(from variables.$primary_border_1 h s l /.5);
                         }
@@ -68,7 +104,17 @@
                     font-size:.7rem;
                 }
                 & button{
+                    cursor: pointer;
                     margin-top:1rem;
+                    background-color: variables.$primary-color-2;
+                    border:none;
+                    color:variables.$white_color;
+                    padding:.7rem 0;
+                    border-radius: .5rem;
+                    font-family: variables.$mediumFont;
+                    &:focus-visible{
+                        outline: transparent;
+                    }
                 }
 
             }
@@ -77,19 +123,6 @@
     }
 }
 
-.logo{
-    position:absolute;
-    top:60px;
-    left:15%;
-}
 
-.image_wrapper{
-    @include mixin.flexCenter;
-    & > img{
-        width:100%;
-        height: auto;
-        object-fit: contain;
-    }
-    
 
-}
+
