--- a/src/views/ProtectedRoutes/style.module.scss
+++ b/src/views/ProtectedRoutes/style.module.scss
@@ -13,6 +13,7 @@
 .views{
     flex:1;
     min-height: 100%;
-    padding-top:70px;
     background-color: #FBFBFB;
+    padding:60px 1rem 0;
+    margin-top:2rem;
 }
