--- a/src/custom-ui/SideBar/sidebar.module.scss
+++ b/src/custom-ui/SideBar/sidebar.module.scss
@@ -3,7 +3,20 @@
 
 $height: 30px;
 
+
+.hideContainer{
+    display: none;
+}
+
 .container{
+    position: fixed;
+    display: none;
+    top:0;
+    left:0;
+    @include mixin.breakpoint(md){
+        position: relative;
+        display: block !important;
+    }
     width:230px;
     height:100%;
     overflow:clip auto;
@@ -65,6 +78,11 @@ $height: 30px;
         width:0;
     }
 }
+
+.showContainer{
+    display:block ;
+}
+
 
 .groupContainer{
     display: flex;
