--- a/src/views/ProtectedRoutes/style.module.scss
+++ b/src/views/ProtectedRoutes/style.module.scss
@@ -14,6 +14,9 @@
     flex:1;
     min-height: 100%;
     background-color: #FBFBFB;
-    padding:60px 1rem 0;
+    padding:60px .5rem 0;
     margin-top:2rem;
+    @include mixin.breakpoint(md){
+        padding:60px 2rem 0;
+    }
 }
