--- a/src/views/ProtectedRoutes/style.module.scss
+++ b/src/views/ProtectedRoutes/style.module.scss
@@ -14,9 +14,14 @@
     flex:1;
     min-height: 100%;
     background-color: #FBFBFB;
+    overflow: clip auto;
     padding:60px .5rem 0;
-    margin-top:2rem;
+    margin-top:0;
     @include mixin.breakpoint(md){
         padding:60px 2rem 0;
+        margin-top:2rem;
+    }
+    &::-webkit-scrollbar{
+        width:0px;
     }
 }
