--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -8,6 +8,10 @@ $primary_text_1:#545F7D;
 $primary_text_2:#213F7D;
 $primary_text_3:#39CDCC;
 $primary_border_1:#545F7D;
+$inactive:#545F7D;
+$active:#39CD62;
+$pending:#E9B200;
+$blacklisted:#E4033B;
 
 $width:820px;
 
