--- a/src/custom-ui/SideBar/sidebar.module.scss
+++ b/src/custom-ui/SideBar/sidebar.module.scss
@@ -13,6 +13,7 @@ $height: 30px;
     display: none;
     top:0;
     left:0;
+    z-index: 8;
     @include mixin.breakpoint(md){
         position: relative;
         display: block !important;
