--- a/src/views/ProtectedRoutes/style.module.scss
+++ b/src/views/ProtectedRoutes/style.module.scss
@@ -15,11 +15,10 @@
     min-height: 100%;
     background-color: #FBFBFB;
     overflow: clip auto;
-    padding:60px .5rem 0;
+    padding:60px .5rem 1rem;
     margin-top:0;
     @include mixin.breakpoint(md){
-        padding:60px 2rem 0;
-        margin-top:2rem;
+        padding:calc(60px + 2rem) 2rem 1rem;
     }
     &::-webkit-scrollbar{
         width:0px;
