--- a/src/views/Dashboard/Users/users.module.scss
+++ b/src/views/Dashboard/Users/users.module.scss
@@ -26,7 +26,7 @@
 .container{
     display: grid;
     gap:1rem;
-    
+
 }
 
 .cardContainer{
@@ -87,9 +87,15 @@
                             }
                         }
                     }
+                    &:last-of-type{
+                        border-bottom: none;
+                    }
                 }
             }
         }
+    }
+    & > div:nth-of-type(2){
+        margin-top:1rem;
     }
 
 }
