update responsiveness for users and eachuser components and pages

--- a/src/components/Pagination/pagination.module.scss
+++ b/src/components/Pagination/pagination.module.scss
@@ -4,27 +4,41 @@
     width:100%;
     margin-top:1rem;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     & > div:first-of-type{
         font-size: .6rem;
         color:variables.$primary_text_2;
         display: flex;   
     }
+    @include mixin.breakpoint(md){
+        flex-direction: row;
+        justify-content: space-between;
+        gap:.5rem;
+    }
+
 }
 
 .pageUl{
+    width: 100%;
     display: flex;
     margin:0;
+    padding:0;
     list-style-type: none;
     font-size: .6rem;
     gap:.3rem;
     align-items: center;
+    justify-content: space-between;
     & > li{
         color:variables.$primary_text_1;
     }
     & > li[class="selected"] > a{
         color:variables.$primary_text_2;
         font-family: variables.$boldFont;
+    }
+    @include mixin.breakpoint(md){
+        width: fit-content;
+        justify-content: unset;
+        
     }
 }
 
