--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -13,6 +13,8 @@ $active:#39CD62;
 $pending:#E9B200;
 $blacklisted:#E4033B;
 
+$border: hsl(from $primary_border_1 h s l /.15);
+
 $width:820px;
 
 
