--- a/src/views/Dashboard/Users/each-user.module.scss
+++ b/src/views/Dashboard/Users/each-user.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     gap:.5rem;
+    width: fit-content;
     & > span{
         font-size: 1rem;
         height: fit-content;
@@ -33,16 +34,27 @@
         display: flex;
         flex-direction: column;
         gap:1rem;
+        margin-top: 1rem;
+        overflow: auto;
+        & > div:nth-of-type(2){
+            width:100%;
+        }
     }
 
 }
 
 .headContainer{
     background-color: variables.$white_color;
-    padding:1rem 1rem 2px;
+    @include mixin.shadow;
+    padding:1rem 1rem 0px;
     & > div:first-of-type{  
         display: flex;
+        flex-wrap: wrap;
         gap:1rem;
+        color:variables.$primary_text_2;
+        & > div:not(:first-of-type){
+            padding:0 .5rem;
+        }
         & > div:first-of-type{
             & > span{
                 width: 4rem;
@@ -54,5 +66,93 @@
                 font-size: 1.5rem;
             }
         }
+        & > div:not(:first-of-type){
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap:.4rem;
+            & > div:first-of-type{
+                font-size: .8rem;
+                font-family: variables.$mediumFont;
+                height: 1rem;
+            }
+            &:not(:nth-of-type(3)) > div:nth-of-type(2){
+                font-size:.5rem;
+            }
+            &:nth-of-type(3){
+                border-left: 1px solid variables.$border;
+                border-right:1px solid variables.$border;
+                & > div:first-of-type{
+                    font-size:.6rem;
+                    @include mixin.flexCenter;
+                }
+
+                & > div:nth-of-type(2){
+                    font-size: .6rem;
+                    display: flex;
+                    gap:.3rem;
+                    color:variables.$pending;
+                }
+            }
+        }
+    }
+    & > div:nth-of-type(2){
+        display: flex;
+        justify-content: space-between;
+        margin-top:1rem;
+        flex-wrap: wrap;
+    }
+}
+
+.generalContainer{
+    display: flex;
+    flex-direction: column;
+    background-color: variables.$white_color;
+    @include mixin.shadow;
+    border-radius: .3rem;
+    padding:1rem;
+    & > div{
+        & > h3{
+            margin:0;
+            font-size: .8rem;
+            color:variables.$primary_text_2;
+        }
+        & > div{
+            border-bottom:1px solid hsl(from variables.$border h s l / .15);
+            padding:1rem 0;
+            margin-top:.5rem;
+            display: grid;
+            grid-template-columns: repeat(auto-fit,minmax(120px,1fr));
+            @include mixin.breakpoint(md){
+                grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+            }
+            row-gap: 1rem;
+            column-gap:.5rem;
+            justify-content: space-between;
+            margin-bottom: 1rem;
+            &:last-of-type{
+                border:none;
+            }
+        }
+    }
+}
+.generalCard{
+    display: flex;
+    flex-direction: column;
+    gap:.2rem;
+    & > div{
+        font-family: variables.$mediumFont;
+        font-size: .6rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    & > div:first-of-type{
+        color: variables.$primary_text_1;
+        text-transform: uppercase;
+    }
+    & > div:nth-of-type(2){
+        font-size: .7rem;
+        color: variables.$primary_text_2;
     }
 }
