--- a/src/views/Dashboard/Users/users.module.scss
+++ b/src/views/Dashboard/Users/users.module.scss
@@ -26,12 +26,17 @@
 .container{
     display: grid;
     gap:1rem;
+    overflow: auto;
 
 }
 
 .cardContainer{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    width: 100%;
+    grid-template-columns: repeat(2,minmax(150px,1fr));
+    @include mixin.breakpoint(md){
+        grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+    }
     justify-content: space-between;
     gap:2dvw;
     & > div{
@@ -57,6 +62,7 @@
         }
 
     }
+    
 }
 
 .tableContainer{
@@ -65,6 +71,7 @@
         min-height: 520px;
         background-color: variables.$white_color;
         box-shadow: 3px 5px 20px 0px #0000000A;
+    
         border: 1px solid #213F7D0F;
         padding:1rem;
         display: flex;
@@ -93,14 +100,16 @@
                 }
             }
         }
-    }
-   
-
+    }  
 }
 
 .row{
     display: grid;
-    grid-template-columns: .5fr .6fr 1fr .6fr 1.1fr 120px 30px;
+    grid-template-columns: .5fr 1fr 120px 30px;
+    @include mixin.breakpoint(1030px){
+        grid-template-columns: .5fr .6fr 1.1fr 1fr .6fr 120px 30px;
+    }
+   
     gap:.2rem;
 }
 
@@ -187,6 +196,9 @@
 
 .moreContainer{
     position: relative;
+    & > span{
+        cursor: pointer;
+    }
     & > ul{
         z-index: 9;
         list-style: none;
@@ -211,5 +223,12 @@
             color:variables.$primary_text_2;
             cursor: pointer;
         }
+    }
+}
+
+.remove{
+    display: none;
+    @include mixin.breakpoint(1030px){
+        display: flex;
     }
 }
