--- a/src/views/ProtectedRoutes/style.module.scss
+++ b/src/views/ProtectedRoutes/style.module.scss
@@ -11,7 +11,7 @@
 }
 
 .views{
-    flex:1;
+    width: 100%;;
     min-height: 100%;
     background-color: #FBFBFB;
     overflow: clip auto;
@@ -23,4 +23,5 @@
     &::-webkit-scrollbar{
         width:0px;
     }
+    overflow: clip auto;
 }
