--- a/src/views/Dashboard/Users/users.module.scss
+++ b/src/views/Dashboard/Users/users.module.scss
@@ -196,6 +196,8 @@
 
 .moreContainer{
     position: relative;
+    display: flex;
+    justify-content: flex-end;
     & > span{
         cursor: pointer;
     }
