--- a/src/components/Loading/loading.module.scss
+++ b/src/components/Loading/loading.module.scss
@@ -1,3 +1,14 @@
+@use '../../css/mixins.scss' as mixin;
+@use '../../css/variables.scss' as var;
 .container{
-    
+    @include mixin.flexCenter;
+    position: fixed;
+    width:100%;
+    height: 100%;
+    z-index: 999;   
+    font-size: .8rem;
+    font-family: var.$mediumFont; 
+    top:0;
+    left:0;
+    background-color: var.$white_color;
 }
