--- a/src/components/Loading/loading.module.scss
+++ b/src/components/Loading/loading.module.scss
@@ -1,6 +1,6 @@
 @use '../../css/mixins.scss' as mixin;
 @use '../../css/variables.scss' as var;
-.container{
+.screenContainer{
     @include mixin.flexCenter;
     position: fixed;
     width:100%;
@@ -10,5 +10,14 @@
     font-family: var.$mediumFont; 
     top:0;
     left:0;
+    background-color: var.$white_color;
+}
+
+.container{
+    width:100%;
+    height: 100%;
+    @include mixin.flexCenter; 
+    font-size: .8rem;
+    font-family: var.$mediumFont;
     background-color: var.$white_color;
 }
